--- a/t_w_g_intro/templates/t_w_g_intro/DChoice.html
+++ b/t_w_g_intro/templates/t_w_g_intro/DChoice.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-{% include 't_w_g_intro/Dinstr.html' %}
+{% include Constants.d_instr %}
 
 <p>
     You are playing as <strong>{{ player.role }}</strong>.
