--- a/t_w_g/templates/t_w_g/Dinstr.html
+++ b/t_w_g/templates/t_w_g/Dinstr.html
@@ -1,7 +1,6 @@
-{% extends "global/Instructions.html" %}
-{% load staticfiles otree_tags %}
+{% load otree_tags staticfiles %}
 
-{% block instructions %}
+<div class="instructions well well-lg">
 
     <p>You are participating in a three player interactive cyber security game with attackers, defenders and users. You will be playing in real time against other online participants. You have been randomly chosen to play as the <strong>defender</strong>. The outcome of each round depends on the combination of each of the players' decisions.</p>
 
@@ -10,4 +9,4 @@
 
         <p>You have 45 seconds to make a decision</p>
 
-        {% endblock %}
+</div>
