--- a/t_w_g/templates/t_w_g/UChoice.html
+++ b/t_w_g/templates/t_w_g/UChoice.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-{% include 't_w_g/Uinstr.html' %}
+    {% include Constants.u_instr %}
 
 <p>
     You are playing as <strong>{{ player.role }}</strong>.
