--- a/t_w_g_intro/templates/t_w_g_intro/AChoice.html
+++ b/t_w_g_intro/templates/t_w_g_intro/AChoice.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    {% include 't_w_g_intro/Ainstr.html' %}
+    {% include Constants.a_instr %}
 
 <p>
     You are playing as <strong>{{ player.role }}</strong>.
