change the notif and game name

--- a/t_w_g_intro/templates/t_w_g_intro/Infosheet.html
+++ b/t_w_g_intro/templates/t_w_g_intro/Infosheet.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <script>
-new Notification("Name Game HIT is starting",{body:"Enough Mturks have accepted this HIT. Please return to the HIT to complete it."});
+new Notification("Three Way Cyber Security Game HIT is starting",{body:"Enough Mturks have accepted this HIT. Please return to the HIT to complete it."});
 </script>
 <audio autoplay><source src="{% static 't_w_g_intro/alarm.mp3' %}" type="audio/mpeg"></audio>
 <div style="font-size:20px">
