--- a/t_w_g_du/templates/t_w_g_du/Results.html
+++ b/t_w_g_du/templates/t_w_g_du/Results.html
@@ -2,7 +2,7 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Results
+    Round {{round_number}} Results
 {% endblock %}
 
 {% block content %}
