--- a/t_w_g_du_intro/templates/t_w_g_du_intro/DChoice.html
+++ b/t_w_g_du_intro/templates/t_w_g_du_intro/DChoice.html
@@ -2,18 +2,18 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Round {{ round_number }} of {{ total_rounds }}
+    Practice Round {{ round_number }} of {{ num_rounds }}
 {% endblock %}
 
 {% block content %}
 
-{% include 't_w_g_du/Uinstr.html' %}
+{% include Constants.d_instr %}
 
 <p>
     You are playing as <strong>{{ player.role }}</strong>.
 </p>
 
-{% formfield group.u_choice with label='Please choose your action' %}
+{% formfield group.d_choice with label='Please choose your action' %}
 
     {% next_button %}
 
