--- a/t_w_g_ud/templates/t_w_g_ud/AChoice.html
+++ b/t_w_g_ud/templates/t_w_g_ud/AChoice.html
@@ -2,7 +2,7 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    attacker
+    Round {{ round_number }} of {{ total_rounds }}
 {% endblock %}
 
 {% block content %}
