--- a/t_w_g_ud_intro/templates/t_w_g_ud_intro/AChoice.html
+++ b/t_w_g_ud_intro/templates/t_w_g_ud_intro/AChoice.html
@@ -2,23 +2,20 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Round {{ round_number }} of {{ total_rounds }}
+    Practice Round {{ round_number }} of {{ num_rounds }}
 {% endblock %}
 
 {% block content %}
 
-{% include 't_w_g_ud/Uinstr.html' %}
+    {% include Constants.a_instr %}
 
 <p>
     You are playing as <strong>{{ player.role }}</strong>.
 </p>
 
-<p>
-    <strong>Defender</strong> chooses <i>{{ d_choice }}</i>
-</p>
-
-{% formfield group.u_choice with label='Please choose your action' %}
+{% formfield group.a_choice with label='Please choose your action' %}
 
     {% next_button %}
+
 
 {% endblock %}
