--- a/t_w_g_ud_intro/templates/t_w_g_ud_intro/UChoice.html
+++ b/t_w_g_ud_intro/templates/t_w_g_ud_intro/UChoice.html
@@ -2,19 +2,15 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Round {{ round_number }} of {{ total_rounds }}
+    Practice Round {{ round_number }} of {{ num_rounds }}
 {% endblock %}
 
 {% block content %}
 
-{% include 't_w_g_ud/Uinstr.html' %}
+{% include Constants.u_instr %}
 
 <p>
     You are playing as <strong>{{ player.role }}</strong>.
-</p>
-
-<p>
-    <strong>Defender</strong> chooses <i>{{ d_choice }}</i>
 </p>
 
 {% formfield group.u_choice with label='Please choose your action' %}
