--- a/t_w_g_ud_intro/templates/t_w_g_ud_intro/Uinstr.html
+++ b/t_w_g_ud_intro/templates/t_w_g_ud_intro/Uinstr.html
@@ -5,7 +5,7 @@
     <p>You are participating in a three player interactive cyber security game with attackers, defenders and users. You will be playing in real time against other online participants. You have been randomly chosen to play as the <strong>user</strong>. The outcome of each round depends on the combination of each of the players' decisions.</p>
 
 	<p>Here are the choices you are presented with. The cost, probabilities, and payoff/reward are included in the table below. The column represents your own actions and the rows represent the actions of the other players.
-	<img src="{% static "t_w_g_du_intro/usr.png" %}"/>
+	<img src="{% static "t_w_g_ud_intro/usr.png" %}"/>
 	</p>
 
 	<p>You have 45 seconds to make a decision</p>
