--- a/t_w_g_du_intro/templates/t_w_g_du_intro/DChoice.html
+++ b/t_w_g_du_intro/templates/t_w_g_du_intro/DChoice.html
@@ -13,6 +13,10 @@
     You are playing as <strong>{{ player.role }}</strong>.
 </p>
 
+<p>
+    <strong>User</strong> chooses <i>{{ u_choice }}</i>
+</p>
+
 {% formfield group.d_choice with label='Please choose your action' %}
 
     {% next_button %}
