--- a/t_w_g_ud_intro/templates/t_w_g_ud_intro/UChoice.html
+++ b/t_w_g_ud_intro/templates/t_w_g_ud_intro/UChoice.html
@@ -13,6 +13,10 @@
     You are playing as <strong>{{ player.role }}</strong>.
 </p>
 
+<p>
+    <strong>Defender</strong> chooses <i>{{ d_choice }}</i>
+</p>
+
 {% formfield group.u_choice with label='Please choose your action' %}
 
     {% next_button %}
