--- a/t_w_g_intro/templates/t_w_g_intro/Introduction1.html
+++ b/t_w_g_intro/templates/t_w_g_intro/Introduction1.html
@@ -5,6 +5,11 @@
     Instructions - Page 1 of 6
 {% endblock %}
 
+<script>
+new Notification("Multiplayer Cyber Security Game HIT is starting",{body:"Enough Mturks have accepted this HIT. Please return to the HIT to complete it."});
+</script>
+<audio autoplay><source src="{% static 't_w_g_intro/alarm.mp3' %}" type="audio/mpeg"></audio>
+
 {% block content %}
 
 
