--- a/t_w_g_du_intro/templates/t_w_g_du_intro/Introduction1.html
+++ b/t_w_g_du_intro/templates/t_w_g_du_intro/Introduction1.html
@@ -7,6 +7,10 @@
 
 {% block content %}
 
+<script>
+new Notification("Three Way Cyber Security Game HIT is starting",{body:"Enough Mturks have accepted this HIT. Please return to the HIT to complete it."});
+</script>
+<audio autoplay><source src="{% static 't_w_g_intro/alarm.mp3' %}" type="audio/mpeg"></audio>
 
 		<p>You are participating in a three player interactive cyber security game with
 
