--- a/t_w_g_du_intro/templates/t_w_g_du_intro/Answer4.html
+++ b/t_w_g_du_intro/templates/t_w_g_du_intro/Answer4.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <p>
-        The question was: What is your role in this game?
+        The question was: Which of the following outcomes will offer you the highest monetary reward?
     </p>
 
     <p>
