--- a/t_w_g_du_intro/templates/t_w_g_du_intro/Infosheet.html
+++ b/t_w_g_du_intro/templates/t_w_g_du_intro/Infosheet.html
@@ -2,12 +2,10 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Information Sheet
+    Information Sheet - Please read and continue to be taken to the waiting page
 {% endblock %}
 
 {% block content %}
-
-<div style="font-size:20px">
 
 	<p><strong>University of Southern California<br>
     CREATE</strong><br>
@@ -25,7 +23,7 @@
     You are invited to participate in a cyber attack game. By game, we mean that this is a simulation of a cyber attack and there is no actual information theft involved.</p>
 
     <p>PARTICIPANT INVOLVEMENT<br>
-    We are asking you to play a cyber attack game. This game requires three people to participate and you may be randomly chosen to play an attacker, defender, or user. You will be playing against 2 other people in real time. If you are the attacker, your goal will be to successfully attack your targets, if you are a defender or user, your goal will be to protect yourself from an attack. The game will be preceded by 6 pages of instructions, two practice rounds to familiarize yourself with the game, and three training questions regarding the mechanics of the game after you have completed the practice rounds. You will then play 20 rounds of this game. This game will take 30-40 minutes to complete.</p>
+    We are asking you to play a cyber attack game. This game requires three people to participate and you may be randomly chosen to play an attacker, defender, or user. You will be playing against 2 other people in real time. If you are the attacker, your goal will be to successfully attack your targets, if you are a defender or user, your goal will be to protect yourself from an attack. The game will be preceded by 6 pages of instructions, two practice rounds to familiarize yourself with the game, and three training questions regarding the mechanics of the game after you have completed the practice rounds. You will then play 20 rounds of this game. This game will take 20-30 minutes to complete.</p>
 
     <p>POTENTIAL RISKS AND DISCOMFORTS<br>
     There are no anticipated risks involved in participating in the survey.</p>
@@ -46,7 +44,7 @@
     Your alternative is to not participate. If you joined through Amazon Mechanical Turk, your option is to participate in a different HIT.</p>
 
     <p>INVESTIGATOR CONTACT INFORMATION<br>
-    If you have any questions or concerns about the research, please feel free to contact: Sarah Kusumastuti (kusumast@usc.edu), Sule Guney (suleguney@gmail.com), or Richard John (richardj@usc.edu)</p>
+    If you have any questions or concerns about the research, please feel free to contact: Sarah Kusumastuti (kusumast@usc.edu) or Richard John (richardj@usc.edu)</p>
 
     <p>IRB CONTACT INFORMATION<br>
     If you have questions, concerns, or complaints about your rights as a research participant or the research in general and are unable to contact the research team, or if you want to talk to someone independent of the research team, please contact the University Park Institutional Review Board (UPIRB), 3720 South Flower Street #301, Los Angeles, CA  90089-0702, (213) 821-5272 or upirb@usc.edu.</p>
