--- a/t_w_g_ud_intro/templates/t_w_g_ud_intro/Infosheet.html
+++ b/t_w_g_ud_intro/templates/t_w_g_ud_intro/Infosheet.html
@@ -7,11 +7,6 @@
 
 {% block content %}
 
-<script>
-new Notification("Three Way Cyber Security Game HIT is starting",{body:"Enough Mturks have accepted this HIT. Please return to the HIT to complete it."});
-</script>
-<audio autoplay><source src="{% static 't_w_g_intro/alarm.mp3' %}" type="audio/mpeg"></audio>
-<div style="font-size:20px">
 
 	<p><strong>University of Southern California<br>
     CREATE</strong><br>
@@ -50,7 +45,7 @@ new Notification("Three Way Cyber Security Game HIT is starting",{body:"Enough M
     Your alternative is to not participate. If you joined through Amazon Mechanical Turk, your option is to participate in a different HIT.</p>
 
     <p>INVESTIGATOR CONTACT INFORMATION<br>
-    If you have any questions or concerns about the research, please feel free to contact: Sarah Kusumastuti (kusumast@usc.edu), Sule Guney (suleguney@gmail.com), or Richard John (richardj@usc.edu)</p>
+    If you have any questions or concerns about the research, please feel free to contact: Sarah Kusumastuti (kusumast@usc.edu) or Richard John (richardj@usc.edu)</p>
 
     <p>IRB CONTACT INFORMATION<br>
     If you have questions, concerns, or complaints about your rights as a research participant or the research in general and are unable to contact the research team, or if you want to talk to someone independent of the research team, please contact the University Park Institutional Review Board (UPIRB), 3720 South Flower Street #301, Los Angeles, CA  90089-0702, (213) 821-5272 or upirb@usc.edu.</p>
