--- a/t_w_g_intro/templates/t_w_g_intro/Infosheet.html
+++ b/t_w_g_intro/templates/t_w_g_intro/Infosheet.html
@@ -2,12 +2,12 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Information Sheet
+    Information Sheet - Please read and continue to be taken to the waiting page
 {% endblock %}
 
 {% block content %}
 
-<div style="font-size:20px">
+
 
 	<p><strong>University of Southern California<br>
     CREATE</strong><br>
@@ -46,7 +46,7 @@
     Your alternative is to not participate. If you joined through Amazon Mechanical Turk, your option is to participate in a different HIT.</p>
 
     <p>INVESTIGATOR CONTACT INFORMATION<br>
-    If you have any questions or concerns about the research, please feel free to contact: Sarah Kusumastuti (kusumast@usc.edu), Sule Guney (suleguney@gmail.com), or Richard John (richardj@usc.edu)</p>
+    If you have any questions or concerns about the research, please feel free to contact: Sarah Kusumastuti (kusumast@usc.edu) or Richard John (richardj@usc.edu)</p>
 
     <p>IRB CONTACT INFORMATION<br>
     If you have questions, concerns, or complaints about your rights as a research participant or the research in general and are unable to contact the research team, or if you want to talk to someone independent of the research team, please contact the University Park Institutional Review Board (UPIRB), 3720 South Flower Street #301, Los Angeles, CA  90089-0702, (213) 821-5272 or upirb@usc.edu.</p>
