--- a/twg_lab/templates/twg_lab/Feedback.html
+++ b/twg_lab/templates/twg_lab/Feedback.html
@@ -10,6 +10,7 @@
 
 <P>We would like to have your feedback on this study</P>
 
+	{% formfield player.email %}
     {% formfield player.diff %}
     {% formfield player.clear %}
     {% formfield player.timing_instr %}
@@ -17,7 +18,7 @@
     {% formfield player.timing_res %}
     {% formfield player.comment %}
 
-    <p>Thank you for participating in our study. Your completion code is Zxy9234J</p>
+    <p>Thank you for participating in our study. </p>
 
     {% next_button %}
 
