--- a/twg_lab_intro/templates/twg_lab_intro/Infosheet.html
+++ b/twg_lab_intro/templates/twg_lab_intro/Infosheet.html
@@ -33,7 +33,7 @@
     There are no anticipated benefits to the participant. The anticipated benefits to society is the advancement of knowledge.</p>
 
     <p>PAYMENT/COMPENSATION FOR PARTICIPATION<br>
-    All participant will be rewarded 1.5 credits for participating in the study. There will be no monetary reward obtained from this study, but if you obtain the highest reward among the three players in the game, you will be entered for a chance to receive a $25 Amazon gift card</p>
+    All participant will be rewarded 1.5 credits for participating in the study. There will be no monetary reward obtained from this study, but the participant with the highest total in-game reward across all participants of the study who is assigned the same role will receive a $25 Amazon gift card.</p>
 
     <p>CONFIDENTIALITY<br>
     There will be no identifiable information obtained in connection with this study. Your name, address or other identifiable information will not be collected. The anonymous data will be maintained on a secure computer and retained at the discretion of the investigator. The members of the research team, the funding agency and the University of Southern Californiaӳ Human Subjects Protection Program (HSPP) may access the data. The HSPP reviews and monitors research studies to protect the rights and welfare of research subjects.</p>
