--- a/twg_lab_intro/templates/twg_lab_intro/Introduction5.html
+++ b/twg_lab_intro/templates/twg_lab_intro/Introduction5.html
@@ -16,7 +16,7 @@ payoffs. The table will remain available to you on all subsequent screens for yo
 
 convenience. The next page provides a brief explanation of how to read the table.</p>
 
-<p>There are {{game_rounds}} rounds in this game. All participant will be rewarded 1.5 credits for participating in the study. There will be no monetary reward obtained from this study, but if you obtain the highest reward among the three players in the game, you will be entered for a chance to receive a $25 Amazon gift card. Before you play the game there will be {{num_rounds}} practice rounds for you to play so that you can familiarize yourself with the game. After the practice rounds you will be presented with a question that tests your understanding of the game.</p>
+<p>There are {{game_rounds}} rounds in this game. All participant will be rewarded 1.5 credits for participating in the study. There will be no monetary reward obtained from this study, but if you obtain the highest total in-game reward across all participants of the study who is assigned the same role as you, you will receive a $25 Amazon gift card. Before you play the game there will be {{num_rounds}} practice rounds for you to play so that you can familiarize yourself with the game. After the practice rounds you will be presented with a question that tests your understanding of the game.</p>
 <p>You are given 45 seconds to make a decision for each round. If you do not make a decision within the time limit, a choice will be randomly generated for you.</p>
 
     {% next_button %}
