ud hopefully mturk ready

--- a/twg_lab_du/templates/twg_lab_du/Feedback.html
+++ b/twg_lab_du/templates/twg_lab_du/Feedback.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    {% formfield player.turk_id %}
+    {% formfield player.email %}
 
 <P>We would like to have your feedback on this study</P>
 
