--- a/t_w_g_ud_intro/templates/t_w_g_ud_intro/Introduction5.html
+++ b/t_w_g_ud_intro/templates/t_w_g_ud_intro/Introduction5.html
@@ -2,7 +2,7 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Introduction - Page 5 of 6
+    Instructions - Page 5 of 6
 {% endblock %}
 
 {% block content %}
