--- a/t_w_g_ud_intro/templates/t_w_g_ud_intro/Introduction6.html
+++ b/t_w_g_ud_intro/templates/t_w_g_ud_intro/Introduction6.html
@@ -2,7 +2,7 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Introduction - Page 6 of 6
+    Instructions - Page 6 of 6
 {% endblock %}
 
 {% block content %}
